[project]
name = "flake8-datetime-import"
authors = [{name = "Marc Gibbons", email = "marc@marcgibbons.com"}]
license = {text = "MIT"}
description = "A plugin for flake8 which enforces importing `datetime as dt` and `time as tm`."
readme = "README.md"
keywords = [
    "flake8",
    "datetime",
    "time",
    "qa",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
version = "0.1.0-alpha1"
requires-python = ">=3.7"
dependencies = [
    'importlib-metadata>=0.9; python_version<"3.8"',
]

[project.urls]
Homepage = 'https://github.com/marcgibbons/flake8-datetime-import'

[project.entry-points."flake8.extension"]
DTI = "flake8_datetime_import:Plugin"

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
]
gh = [
    "tox-gh"
]
build = [
    "build"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
profile = "black"
