[project]
name = "flake8-datetime-import"
authors = [{name = "Marc Gibbons", email = "marc@marcgibbons.com"}]
license = "MIT"
license-files = ["LICENSE"]
description = "A plugin for flake8 which enforces importing `datetime as dt` and `time as tm`."
readme = "README.md"
keywords = [
    "flake8",
    "datetime",
    "time",
    "qa",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/marcgibbons/flake8-datetime-import"
Issues = "https://github.com/marcgibbons/flake8-datetime-import/issues"
Source = "https://github.com/marcgibbons/flake8-datetime-import"

[project.entry-points."flake8.extension"]
DTI = "flake8_datetime_import:Plugin"

[dependency-groups]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["flake8_datetime_import"]

[tool.pytest.ini_options]
addopts = "--cov=flake8_datetime_import --cov-report=term-missing"

[tool.coverage.run]
patch = ["subprocess"]
source_pkgs = ["flake8_datetime_import"]

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
profile = "black"
